--- a/src/Home/styles.css
+++ b/src/Home/styles.css
@@ -1,8 +1,17 @@
 #homeContainer {
-  height: 100vh;
-  margin-top: 2.5rem;
+  position: fixed;
+  top: 2.5rem;
+  height: 95vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
+}
+#bottomSpacer {
+  height: 2.5rem;
+}
+@media (max-width: 400px) {
+  #bottomSpacer {
+    height: 10rem;
+  }
 }
 
 #topContainer {
